# libdl

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Example_LEGO.cpp  Example_MNIST.cpp  Example_MNIST3.cpp  Example_MNIST3.hpp  Example_MNIST_2.cpp  Example_MNIST_4.cpp  Example_MNIST_Layer.cpp  Example_XOR.cpp  Example_XOR_2.cpp  README.md  main.cpp
WeightDeposit/: b1.txt  b2.txt  b3.txt  b4.txt  f1.txt  f2.txt  w1.txt  w2.txt
data/lego/: description.txt
docs/: doxygen-config
pythonApps/: CMakeLists.txt  Presentation.ipynb  appP.py  example_lego#.ipynb  example_lego.py  helper.py  network2.py
